@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

left to right direction
hide circle
title ERD-11 - Reporting và read model
caption Mô tả các bảng snapshot/read model phục vụ sales, operations, inventory movement và aggregate\nsupport.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "reporting_daily_sales_snapshots" as reporting_daily_sales_snapshots {
  * snapshot_id
    branch_id
    gross_bill_amount
    discount_amount
    billed_total_amount
    invoiced_total_amount
    invoiced_tax_amount
}

entity "reporting_daily_operation_snapshots" as reporting_daily_operation_snapshots {
  * snapshot_id
    branch_id
    business_date
    refreshed_at
    created_at
    updated_at
    scheduled_reservation_count
}

entity "reporting_daily_inventory_movement_snapshots" as reporting_daily_inventory_movement_snapshots {
  * snapshot_id
    branch_id
    ingredient_id
    unit_code
    business_date
    last_movement_at
    refreshed_at
}

entity "conversation_aggregates" as conversation_aggregates {
  * agg_id
    created_at
    channel
    agg_date
    hour
    total_conversations
    total_messages
}

entity "branches" as branches {
  * branch_id
    branch_code
    business_hours
    closure_windows
    booking_policy
    currency
    created_at
}

entity "ingredients" as ingredients {
  * ingredient_id
    code
    unit_code
    created_at
    updated_at
    name
    description
}

branches ||--o{ reporting_daily_operation_snapshots : branch_id
branches ||--o{ reporting_daily_inventory_movement_snapshots : branch_id
ingredients ||--o{ reporting_daily_inventory_movement_snapshots : ingredient_id
branches ||--o{ reporting_daily_sales_snapshots : branch_id
@enduml





